<resources>
    <string name="app_name">MyViewandViews</string>
    <string name="content_text">Perjuangan BJ Habibie dari masa kecil hingga
    menjadi Presiden Indonesia ketiga dilaluinya dengan keras dan penih dengan perjuangan yang panjang
    . Banyak peran dan karya BJ Habibie bagi bangsa Indonesia khususnya dalam bidang
    kedirgantaraan. Berikut profil dan biografi BJ habibie dari masa kecil hingga ia sukses sampai saat ini
    </string>
    <string name="name">Prof. Dr. Ing. H. Bacharuddin Jusuf Habibie</string>
    <string name="TTL">ParePare, 25 Juni 1936</string>
    <string name="jabatan">Presiden Indonesia ke-3 \n
    Wakil Presiden Indonesia ke-7\n
    Mentri Riset dan Teknologi ke-4
    </string>
    <string name="penemuan">Crack progresson theory\n
    Pesawat 250\n
    Pesawat R80</string>
    <string name="donasi">Donasi pesawat R80</string>
    <string name="ajakan">Sudah saatnya indonesia memiliki pesawat sendiri, salurkan donasi anda!</string>


</resources>
